# resource_manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  rctl2_sample.py  risingwave.md  test_feature.yml  ui.py  vault_sample.py
rctl/: __init__.py  __main__.py  _io.py  api.py  base.py  base2.py  core.py  exceptions.py  registry.py  scanner.py
rctl/app/: __init__.py
rctl/cli/: _main.py  resource.py
rctl/kv_store/: __init__.py
rctl/modules/: __init__.py  _boto3.py  _fsspec.py  _psycopg2.py  _risingwave.py  file.py
rctl2/: __init__.py  __main__.py  _init.py  api.py  config.py  exceptions.py  files.py  fsstore.py  helpers.py  parser.py
rctl2/cli/: _main.py  core.py  resource.py
rctl2/envirnoment/: __init__.py  config.py  functions.py
rctl2/filesystems/: __init__.py  _array.py  _dict.py  _env.py  _vault.py  utils.py
rctl2/kvstores/: __init__.py  abc.py  adapter.py  api.py  fsstore.py  registry.py  serializer.py  serializers.py
rctl2/kvstores/serializers/: __init__.py  abc.py  basics.py  serializers.py
rctl2/kvstores/stores/: __init__.py  abc.py  arraystore.py  dbstore.py  dictstore.py  envstore.py  filestore.py  fsstore.py  hvacstore.py
rctl2/parser/: api.py  grammar.lark  helpers.py  parser.py  template_graph.html  transformer.py
rctl2/resources/: dockercompose.py
rctl2/serializers/: __init__.py  abc.py  basics.py
src/: __main__.py  base.py  base2.py  core.py  registry.py
src/backends/: backends.py
src/connectors/: db.py
src/modules/: __init__.py  db.py  file.py  mock.py  s3.py
test_data/manifest/: test.yml  test_feature.yml
test_data/steps/: fsspec-local.yml  fsspec-minio.yml  sql-postgres-connect.yml  sql-postgres-table.yml  sql-schema.yml
tests/data/json_store/: a.json
tests/data/json_store/b/: c.json
tests/test_filesystems/: __init__.py  conftest.py  test_array.py  test_env.py  test_fs.py  test_utils.py  test_vault.py
tests/test_kvstore/: test_kvstore.py
tests/test_modules/: test_file.py
tests/test_serializers/: test_basics.py
