[project]
name = "resmgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.8",
    "fsspec>=2025.2.0",
    "jinja2>=3.1.5",
    "pre-commit>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "ruff>=0.9.7",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "yml>=0.0.1",
]
