[project]
name = "rctl"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "fsspec>=2025.2.0",
    "jinja2>=3.1.5",
    "pydantic>=2.10.6",
    "s3fs>=2025.2.0",
    "boto3>=1.36.23",
    "s3transfer>=0.11.2",
    "typer>=0.15.1",
    "psycopg2-binary==2.9.9",
    "risingwave-py>=0.0.1", # psycopg2 2.9.9 でしか動かない
    "python-hcl2>=6.1.1",
    "networkx>=3.4.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "black>=25.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
server = [
    "fastapi>=0.115.8",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]
vault = [
    "hvac>=2.3.0", # vault
]


[tool.setuptools]
packages = { find = { include = ["rctl*"] } }

[project.scripts]
rctl = "rctl.__main__:main"


[tool.ruff]
line-length = 88          # blackと合わせる
lint.select = [
    "I",  # isort
    "E",  # pycodestyle
    "F",  # pyflakes
    "YTT" # 3.9未満互換コードを3.9の推奨構文に合わせる
]
lint.ignore = [
    "F401",  # unused import
    "E501"   # line-length balck で自動修正される
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
